# cds

./: .babelrc.js  .codeflow.yml  .dockerignore  .dontdockerignore  .env  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .npmrc  .percy.js  .prettierignore  .stylelintrc.cjs  .stylelintrc.js  .yarnrc.yml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  Makefile  OWNERS  README.md  audit-barrel-files.mjs  audit-base-props.mjs  audit-missing-files.mjs  babel.build.config.js  babel.config.js  cds-repo-sync.mjs  cds_deployable.bzl  cds_package.bzl  cds_package_static.bzl  config.bzl  constraints.pro  dangerfile.ts  eslint-common.js  eslint.autofix.cjs  eslint.autofix.mjs  eslint.config.cjs  eslint.config.mjs  jest.config.js  (+24 more)
_template/: .eslintrc  BUILD.bazel  CHANGELOG.md  README.md  basepackage.json  deps.bzl
_template/example/: index.ts
cloud/: BUILD.bazel  combineCssFiles.ts
codegen/: BUILD.bazel  Control.ts  Icon.ts  Lottie.ts  Palette.ts  README.md  Spacing.ts  Typescript.ts  main.ts  tsconfig.json  types.d.ts
codegen/Spectrum/: Spectrum.ts  createSpectrum.ts  types.ts
codegen/Type/: Type.ts  config.ts  generateTypeStyles.ts  generateTypeStylesBeta.ts  utils.ts
codegen/adoption/: build.ts  config.ts  prepare.ts  types.ts
codegen/babel-plugins/: linariaCssExtractPlugin.js  linariaPreset.js
codegen/configs/: avatarConfig.ts  borderConfig.ts  borderRadiusConfig.ts  controlsConfig.ts  iconConfig.ts  paletteConfig.ts  scaleConfig.ts  spacingConfig.ts  svgo.config.js  themeConfigs.ts  typographyConfig.ts  typographyConfigBeta.ts
codegen/figma/: client.ts
codegen/icons/: .svgo.yml  Icon.ts  build.ts  createIconFont.ts  createIconSet.ts  createPaths.ts  createUnicodeMap.ts  fillMissingIcons.ts  iconManifest.ts  iconsManifest.json  manifest.ts  svgo.config.js  syncSvgsFromFigma.ts
codegen/illustrations/: README.md  blacklist.ts  build.ts  illustration_manifest.ts  illustration_statistics.ts  interfaces.ts  modified.ts  svgWhitelist.ts  uploadToStaticAssets.sh  utils.ts
codegen/playground/: prepareRoutes.ts
codegen/scaffold/: iconsManifest.json  newPackageFromTemplate.ts  syncSvgsFromFigma.ts
codegen/scripts/: prepareRelease.ts
codegen/story/: updateTextStory.ts
codegen/templates/: css.ejs  docgen.ejs  docgenSimple.ejs  fontFace.ejs  lottieFiles.ejs  lottieSource.ejs  lottieStyles.ejs  mobileRoutes.ejs  objectMap.ejs  objectMapUnevaled.ejs  themeConfig.ejs  themes.ejs  typescript.ejs
codegen/theme/: buildTheme.ts
codegen/utils/: buildTemplates.ts  createDescriptionGraph.ts  generateFromTemplate.ts  writeFile.ts
codegen/website/: ComponentDocgen.ts  PropertyDocgen.ts  build.ts  changelog.ts  constants.ts  docgen.ts  types.ts  updateTextStylesTable.ts  utils.ts
codemod/: BUILD.bazel  Codemod.ts  addDefaultProps.ts  convertToNewSpacingProps.ts  halveSpacingProps.ts  iconNameMigration.ts  migrateRNDSImports.ts  migrateToDeepImports.ts  runIconMigration.sh  tsconfig.json
codemod/factory/: migrateComponentProps.ts
common/: .eslintrc  BUILD.bazel  CHANGELOG.md  SystemProvider.tsx  basepackage.json  deps.bzl  index.ts  lottieUtils.test.ts  lottieUtils.ts  tsconfig.build.json  tsconfig.json  types.ts  useIconSize.ts
common/Box/: BoxBaseProps.ts
common/Button/: ButtonBaseProps.ts
common/Text/: TextBaseProps.ts
common/accordions/: AccordionParentContext.tsx  accordionStyles.ts
common/animation/: accordion.ts  border.ts  carousel.ts  collapse.ts  collapsible.ts  dot.ts  drawer.ts  menu.ts  modal.ts  overlay.ts  paddle.ts  tabs.ts  toast.ts  tooltip.ts
common/avatar/: AvatarText.tsx  useBackground.ts  useDimension.ts
common/beta/: BetaContext.ts  BetaProvider.tsx  useBeta.ts
common/cards/: createAnnouncementCard.tsx  createAnnouncementCardDeprecated.tsx  createCardBody.tsx  createCardBodyAction.tsx  createCardFooter.tsx  createCardHeader.tsx  createCardMedia.tsx  createFeatureEntryCard.tsx  createFeedCard.tsx
common/color/: blendColors.ts  colorToSpectrumAlias.ts  getAccessibleForeground.ts  getLuminance.ts  (+5 more)
core/: .eslintrc  BUILD.bazel  CHANGELOG.md  README.md  basepackage.json  index.ts  types.ts
fonts/: BUILD.bazel  CHANGELOG.md  README.md  basepackage.json  fonts-beta.css  fonts.css  index.ts  tsconfig.build.json
icons/: .eslintrc  .svgrrc.js  @svgr__core.d.ts  BUILD  BUILD.bazel  CHANGELOG.md  IconHeavy.tsx  IconLight.tsx  Makefile  README.md  basepackage.json  deps.bzl  iconReactTemplate.ts  manifest.json  native.js  props.ts  styles.css  sync.ts  tsconfig.build.json  types.ts  useIconPixelSize.ts
lottie/: .eslintrc  BUILD.bazel  CHANGELOG.md  README.md  animations.js  basepackage.json  deps.bzl  index.ts  types.ts  utils.ts
lottie-files/: .eslintrc  BUILD.bazel  CHANGELOG.md  LottieSource.ts  README.md  basepackage.json  deps.bzl  index.ts  tsconfig.build.json  tsconfig.json
mobile/: .eslintrc  BUILD.bazel  CHANGELOG.md  README.md  basepackage.json  deps.bzl  index.ts  tsconfig.build.json  tsconfig.json  tsconfig.tests.json  types.ts
mobile-playground/: .babelrc.js  App.tsx  BUILD.bazel  app.json  metro.config.js  tsconfig.json
storybook/: BUILD.bazel  tsconfig.json
theme/: .eslintrc  BUILD.bazel  CHANGELOG.md  README.md  ThemeManager.native.tsx  ThemeManager.tsx  ThemeProvider.tsx  basepackage.json  css.d.ts  index.ts  native.js  native.mock.js
utils/: .eslintrc  BUILD.bazel  CHANGELOG.md  README.md  array.ts  basepackage.json  browser.ts  color.ts  deps.bzl  env.ts  index.ts  object.ts  string.ts  tsconfig.build.json  types.ts
web/: .babelrc.js  .browserslistrc  .eslintrc  .stylelintrc.js  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  basepackage.json  css.d.ts  deps.bzl  globalStyles.js  index.ts  jest.config.js  jestSetup.ts  linaria.config.js  rollup.config.js  tokens.ts  tsconfig.build.json  tsconfig.json  tsconfig.tests.json  types.ts
website/: .eslintrc  .gitignore  BUILD.bazel  babel.config.js  cds-docusaurus-babel-plugin.js  cds-docusaurus-plugin.js  cds-docusaurus-ts-linaria-plugin.js  docusaurus.config.js  docusaurus.d.ts  global.ts  sidebars.js  tsconfig.json
(+10309 files in other folders)
