load("@npm//ts-node:index.bzl", "ts_node")
load("//tools:def.bzl", "jest_test", "release_packages", "stylelint_test")
load("//tools/js:def.bzl", "storybook")
load("@npm//@percy/storybook:index.bzl", "percy_storybook")
load(":config.bzl", "PACKAGES", "STATIC_PACKAGES", "append_cds_mobile_deps", "append_cds_web_deps")

exports_files([
    ".babelrc.js",
    ".stylelintrc.js",
    "linaria.config.js",
])

filegroup(
    name = "build_source",
    srcs = [
        "//eng/shared/design-system/%s:runtime_source" % p
        for p in (PACKAGES + STATIC_PACKAGES)
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "web_source",
    srcs = [
        ":build_source",
        "//eng/shared/design-system/storybook:source",
    ] + glob(
        include = [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
            "**/*.css",
        ],
        exclude = [
            "**/*.native.*",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# ***************
# *** linting ***
# ***************

filegroup(
    name = "style_source",
    srcs = [
        ".stylelintrc.js",
        "//eng/shared/design-system/web:runtime_source",
        "//:babel.config.js",
    ] + glob(
        include = [
            "**/*.ts",
            "**/*.tsx",
            "**/*.css",
        ],
        exclude = [
            "mobile/**",
        ],
    ),
)

stylelint_test(
    name = "stylelint",
    lint_srcs = [":style_source"],
)

# ***************
# *** testing ***
# ***************

filegroup(
    name = "source",
    srcs = [
        "//eng/shared/design-system/%s:source" % p
        for p in PACKAGES
    ] + glob([
        "storybook/**/*.ts",
        "storybook/**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tests_configuration",
    srcs = [
        "jest.config.js",
        "jest.config.native.js",
        "jestSetup.native.ts",
        "jestSetup.ts",
        "linaria.config.js",
    ],
    visibility = ["//visibility:public"],
)

TEST_SRCS = [
    "//:babel.config.js",
    "//:package.json",
    "//:tsconfig.json",
    "//eng/shared/design-system:source",
    "//eng/shared/design-system:tests_configuration",
]

TEST_DEPS = [
    "@npm//axe-core",
    "@npm//@babel/core",
    "@npm//@babel/plugin-proposal-class-properties",
    "@npm//@babel/preset-env",
    "@npm//@babel/preset-react",
    "@npm//@babel/preset-typescript",
    "@npm//babel-jest",
    "@npm//babel-plugin-module-resolver",
    "@npm//babel-plugin-relay",
    "@npm//jest",
    "@npm//jest-axe",
    "@npm//react",
    "@npm//text-encoding",
    "@npm//linaria",
]

jest_test(
    name = "unit_tests_web",
    srcs = TEST_SRCS + [
        "//eng/shared/utils:jest/renderA11y.ts",
    ],
    jest_config = "jest.config.js",
    test_srcs = [
        "//eng/shared/design-system/utils:source",
        "//eng/shared/design-system/web:source",
        "//eng/shared/design-system/common:source",
    ],
    deps = append_cds_web_deps(TEST_DEPS + [
        "@npm//@testing-library/jest-dom",
        "@npm//@testing-library/react-hooks",
        "@npm//@testing-library/react",
    ]),
)

jest_test(
    name = "unit_tests_mobile",
    srcs = TEST_SRCS,
    jest_config = "jest.config.native.js",
    test_srcs = [
        "//eng/shared/design-system/mobile:source",
    ],
    deps = append_cds_mobile_deps(TEST_DEPS + [
        "@npm//@babel/preset-flow",
        "@npm//@testing-library/jest-native",
        "@npm//@testing-library/react-hooks",
        "@npm//@testing-library/react-native",
        "@npm//react-native",
    ]),
)

# ***************
# *** codegen ***
# ***************

CODEGEN_DATA = append_cds_web_deps([
    ":build_source",
    "//:.prettierrc",
    "//:tsconfig.json",
    "//eng/shared/design-system/codegen:runtime_source",
    "//tools/js:writePrettyFile.ts",
    "@npm//@types/react",
    "@npm//@types/react-native",
    "@npm//axios",
    "@npm//chalk",
    "@npm//ejs",
    "@npm//react-docgen-typescript",
    "@npm//tsconfig-paths",
    "@npm//webfont",
    "@npm//yargs",
    "@npm//lodash",
    "@npm//ora",
    "@npm//svgo",
    "@npm//svgson",
    "@npm//element-to-path",
])

ts_node(
    name = "codegen",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/main.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "docgen",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/website/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "changelog",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/website/changelog.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "sync_icons",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/icons/syncSvgsFromFigma.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "build_icons",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/icons/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "build_illustrations",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/illustrations/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "prepare_adoption",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/adoption/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "new_package",
    args = [
        "eng/shared/design-system/codegen/scaffold/newPackageFromTemplate.ts",
        "--project $(execpath //:tsconfig.json)",
    ],
    data = [
        "//:tsconfig.json",
        "//eng/shared/design-system/codegen:runtime_source",
        "@npm//chalk",
    ],
)

release_packages(
    name = "release",
    packages_glob = "eng/shared/design-system/*/basepackage.json",
)

# *****************
# *** Storybook ***
# *****************

storybook(
    name = "storybook",
    srcs = [
        ":web_source",
        "//eng/shared/design-system/web:story_source",
    ],
    static_files = ["eng/shared/design-system/fonts"],
    storybook_config = "//eng/shared/design-system/storybook:.storybook",
    deps = append_cds_web_deps([
        "@npm//react-dom",
        "@npm//react-router-dom",
        "@npm//react",
        "@npm//typescript",
    ]),
)

# *************************
# ***      Percy        ***
# *** visual diff tests ***
# *************************

percy_storybook(
    name = "storybook_percy",
    args = [
        "-b eng/shared/design-system/storybook_build",
        "--widths=320,768,1170",
    ],
    data = ["//eng/shared/design-system:storybook_build"],
)
