load("@npm//ts-node:index.bzl", "ts_node")
load("//tools:def.bzl", "release_packages", "stylelint_test")
load("//tools/js:def.bzl", "jest_test", "storybook")
load("@npm//@percy/storybook:index.bzl", "percy_storybook")
load(":config.bzl", "PACKAGES", "STATIC_PACKAGES")
load("//eng/shared/design-system/web:deps.bzl", "DEPS", "DEV_DEPS", "PEER_DEPS")

exports_files([
    ".babelrc.js",
    ".stylelintrc.js",
    "linaria.config.js",
])

filegroup(
    name = "build_source",
    srcs = [
        "//eng/shared/design-system/%s:runtime_source" % p
        for p in (PACKAGES + STATIC_PACKAGES)
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "web_source",
    srcs = [
        ":build_source",
        "//eng/shared/design-system/storybook:source",
    ] + glob(
        include = [
            "**/*.js",
            "**/*.ts",
            "**/*.tsx",
            "**/*.css",
        ],
        exclude = [
            "**/*.native.*",
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# ***************
# *** linting ***
# ***************

filegroup(
    name = "style_source",
    srcs = [
        ".stylelintrc.js",
        "//eng/shared/design-system/web:runtime_source",
        "//:babel.config.js",
    ] + glob(
        include = [
            "**/*.ts",
            "**/*.tsx",
            "**/*.css",
        ],
        exclude = [
            "mobile/**",
        ],
    ),
)

stylelint_test(
    name = "stylelint",
    lint_srcs = [":style_source"],
)

# ***************
# *** testing ***
# ***************

filegroup(
    name = "source",
    srcs = [
        "//eng/shared/design-system/%s:source" % p
        for p in PACKAGES
    ] + glob([
        "storybook/**/*.ts",
        "storybook/**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "tests_configuration",
    srcs = [
        "linaria.config.js",
    ],
    visibility = ["//visibility:public"],
)

TEST_SRCS = [
    "//eng/shared/design-system:source",
    "//eng/shared/design-system:tests_configuration",
]

TEST_DEPS = [
    "@npm//react",
    "@npm//linaria",
]

jest_test(
    name = "unit_tests_web",
    srcs = TEST_SRCS,
    tests = [
        "//eng/shared/design-system/common:source",
        "//eng/shared/design-system/utils:source",
        "//eng/shared/design-system/web:source",
    ],
    deps = TEST_DEPS + [
        "@npm//@cbhq/cds-web",
    ],
)

jest_test(
    name = "unit_tests_mobile",
    srcs = TEST_SRCS,
    mobile = True,
    tests = [
        "//eng/shared/design-system/mobile:source",
    ],
    deps = TEST_DEPS + [
        "@npm//@cbhq/cds-mobile",
    ],
)

jest_test(
    name = "unit_tests_adoption",
    srcs = TEST_SRCS + [
        "//eng/shared/design-system/codegen/adoption:parsers/__tests__/project",
    ],
    jest_config = "jest.config.adoption.js",
    tests = [
        "//eng/shared/design-system/codegen/adoption:source",
    ],
    deps = TEST_DEPS + [
        "@npm//react-native",
        "@npm//ora",
        "@npm//chalk",
        "@npm//yargs",
        "@npm//fast-glob",
        "@npm//strip-json-comments",
    ],
)

# ***************
# *** codegen ***
# ***************

CODEGEN_DATA = [
    ":build_source",
    "//:.prettierrc",
    "//:tsconfig.json",
    "//eng/shared/design-system/codegen:runtime_source",
    "//tools/js:writePrettyFile.ts",
    "@npm//@cbhq/cds-web",
    "@npm//@types/react",
    "@npm//@types/react-native",
    "@npm//axios",
    "@npm//chalk",
    "@npm//ejs",
    "@npm//react-docgen-typescript",
    "@npm//tsconfig-paths",
    "@npm//webfont",
    "@npm//yargs",
    "@npm//lodash",
    "@npm//ora",
    "@npm//svgo",
    "@npm//svgson",
    "@npm//element-to-path",
    "@npm//strip-json-comments",
]

ts_node(
    name = "codegen",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/main.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "docgen",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/website/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "changelog",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/website/changelog.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "sync_icons",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/icons/syncSvgsFromFigma.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "build_icons",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/icons/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "build_illustrations",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/illustrations/build.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA,
)

ts_node(
    name = "prepare_adoption",
    args = [
        "-r tsconfig-paths/register",
        "--files",
        "eng/shared/design-system/codegen/adoption/prepare.ts",
        "--prettierConfig $(execpath //:.prettierrc)",
    ],
    data = CODEGEN_DATA + [
        "//eng/shared/design-system/codegen/adoption:source",
    ],
)

ts_node(
    name = "new_package",
    args = [
        "eng/shared/design-system/codegen/scaffold/newPackageFromTemplate.ts",
        "--project $(execpath //:tsconfig.json)",
    ],
    data = [
        "//:tsconfig.json",
        "//eng/shared/design-system/codegen:runtime_source",
        "@npm//chalk",
    ],
)

release_packages(
    name = "release",
    packages_glob = "eng/shared/design-system/*/basepackage.json",
)

# *****************
# *** Storybook ***
# *****************

storybook(
    name = "storybook",
    srcs = [
        ":web_source",
        "//eng/shared/design-system/fonts:runtime_source",
        "//eng/shared/design-system/web:story_source",
    ],
    static_files = ["eng/shared/design-system/fonts"],
    storybook_config = "//eng/shared/design-system/storybook:.storybook",
    deps = [
        "@npm//react-router-dom",
        "@npm//typescript",
    ] + DEPS + PEER_DEPS + DEV_DEPS,
)

# *************************
# ***      Percy        ***
# *** visual diff tests ***
# *************************

percy_storybook(
    name = "storybook_percy",
    args = [
        "-b eng/shared/design-system/storybook_build",
        "--widths=320,768,1170",
    ],
    data = ["//eng/shared/design-system:storybook_build"],
)
