package_name = "_template"  # Folder name

pkg_dependencies = []

pkg_peer_dependencies = [
    "@npm//react",
    "@npm//react-dom",
]

# SOURCES

# Source files without tests
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.test.ts",
            "**/*.test.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files including docs
filegroup(
    name = "eslint_source",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
        "**/*.md",
        "**/*.mdx",
    ]),
    visibility = ["//visibility:public"],
)

# Only test files
filegroup(
    name = "tests_source",
    srcs = glob([
        "**/*.test.ts",
        "**/*.test.tsx",
    ]),
    visibility = ["//visibility:public"],
)

# PUBLISHING

load("@npm//@babel/cli:index.bzl", "babel")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("//tools:def.bzl", "node_package_deployable", "node_package_gen")

package_source_path = "eng/shared/design-system/%s" % package_name

package_label_path = "//%s" % package_source_path

deploy_name = "cds_%s" % package_name

deploy_dev_name = "cds_%s_dev" % package_name

deploy_label = "%s:package" % package_label_path

# Generate a package.json
node_package_gen(
    name = "package_json",
    dependencies = pkg_dependencies,
    package_metadata = "basepackage.json",
    peer_dependencies = pkg_peer_dependencies,
)

# Compile source files with Babel
babel(
    name = "lib",
    args = [
        "--config-file",
        "$(execpath //:babel.config.js)",
        package_source_path,
        "--out-dir",
        "$(@D)",
        "--extensions .ts,.tsx",
    ],
    data = [
        ":source",
        "//:babel.config.js",
        "//:tsconfig.json",
        "@npm//@babel/preset-env",
        "@npm//@babel/preset-react",
        "@npm//@babel/preset-typescript",
        "@npm//babel-plugin-module-resolver",
        "@npm//babel-plugin-transform-async-to-promises",
    ],
    output_dir = True,
)

# Prepare a package for release by only copying files to publish
pkg_npm(
    name = "package",
    srcs = [
        "CHANGELOG.md",
        "README.md",
    ],
    deps = [
        ":lib",
        ":package_json",
        ":source",
    ],
)

# Publish to development
node_package_deployable(
    name = deploy_dev_name,
    pkg = deploy_label,
    target = "development",
)

# Publish to corporate
node_package_deployable(
    name = deploy_name,
    pkg = deploy_label,
    target = "corporate",
)
