load("//tools:def.bzl", "pkg_zip", "project_settings", "syn_deployable", "syn_file_asset")
load("//tools/js:def.bzl", "ts_script")
load("//eng/shared/design-system:cds_deployable.bzl", "cds_deployable")
load("//eng/shared/design-system:config.bzl", "PACKAGES", "STATIC_PACKAGES")

project_settings(
    caf = False,
    send_dev_notifications = False,
    slack_channels = ["#cds-builds"],
)

[cds_deployable(name = package) for package in (PACKAGES + STATIC_PACKAGES)]

# WEB CSS

ts_script(
    name = "web",
    srcs = [
        "//eng/shared/design-system/cloud:combineCssFiles.ts",
        "//eng/shared/design-system/fonts:package_tar",
        "//eng/shared/design-system/web:package_tar",
    ],
    output_dir = True,
    script = "eng/shared/design-system/cloud/combineCssFiles.ts",
    visibility = ["//visibility:public"],
    deps = [
        "@npm//@cbhq/cds-fonts",
        "@npm//@cbhq/cds-web",
        "@npm//fast-glob",
        "@npm//yargs",
    ],
)

pkg_zip(
    name = "web_zip",
    srcs = [":web"],
    visibility = ["//visibility:public"],
)

syn_deployable(
    name = "upload_css",
    assets = [
        syn_file_asset(
            name = "cds-css",
            src = ":web_zip",
            bucket = "cb-assets-prod",
            is_zip = True,
            key = "cds/",
        ),
    ],
    config_name = "production",
    continuous_deployment = True,
    target = "production",
)

syn_deployable(
    name = "upload_css_dev",
    assets = [
        syn_file_asset(
            name = "cds-css-dev",
            src = ":web_zip",
            bucket = "cb-assets-dev",
            is_zip = True,
            key = "cds/",
        ),
    ],
    config_name = "development",
    target = "development",
)
