load("//tools:def.bzl", "eslint_fix", "eslint_test")

exports_files([
    "babel-plugins/linariaCssExtractPlugin.js",
    "babel-plugins/linariaPreset.js",
])

filegroup(
    name = "base_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Needs to be separate since ejs files cant be linted
filegroup(
    name = "runtime_source",
    srcs = [":base_source"] + glob(
        [
            "**/*.ejs",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = [":base_source"] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    data = [
        "//eng/shared/design-system/common:source",
    ],
    sources = ":source",
)

eslint_fix(
    name = "lint_fix",
    data = [
        "//eng/shared/design-system/common:source",
    ],
    sources = ":source",
)
