load("//tools:def.bzl", "eslint_fix", "eslint_test")

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    sources = ":source",
)

eslint_fix(
    name = "lint_fix",
    sources = ":source",
)
