load("//tools:def.bzl", "eslint_fix", "eslint_test")

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    lint_srcs = [":source"],
)

eslint_fix(
    name = "lint_fix",
    lint_srcs = [":source"],
)
