load("//tools/js:def.bzl", "eslint_test", "ts_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

eslint_test(
    name = "lint",
    lints = [":source"],
    deps = ["@npm//@cbhq/cds-utils"],
)

ts_package(
    name = "package",
    package_name = "@cbhq/cds-common",
    srcs = [":runtime_source"],
    dev_deps = [
        "@npm//@types/d3-array",
        "@npm//@types/d3-color",
        "@npm//@types/d3-scale",
        "@npm//@types/d3-shape",
        "@npm//@types/react",
    ],
    peer_deps = [
        "@npm//react",
    ],
    relative_source_directory = ".",
    static_files = {
        ":CHANGELOG.md": "./CHANGELOG.md",
        ":README.md": "./README.md",
    },
    typescript_config = ":tsconfig.build.json",
    deps = [
        "@npm//@cbhq/cds-utils",
        "@npm//@types/react-is",
        "@npm//d3-array",
        "@npm//d3-color",
        "@npm//d3-scale",
        "@npm//d3-shape",
        "@npm//type-fest",
    ],
)
